--- a/.github/workflows/webpack-build-custom.yml
+++ b/.github/workflows/webpack-build-custom.yml
@@ -14,6 +14,9 @@ on:
         type: choice
         options: [ update, dev ]
 
+permissions:
+  contents: write
+
 jobs:
   webpack-build:
     name: Webpack Build
