--- a/.github/workflows/webpack-build-custom.yml
+++ b/.github/workflows/webpack-build-custom.yml
@@ -56,4 +56,4 @@ jobs:
             cwd: ./web
             message: Update ab_platform_web
             new_branch: ${{ inputs.target_branch }}
-            default_author: github_actions
+            default_author: github_actor
