--- a/.github/workflows/webpack-build-custom.yml
+++ b/.github/workflows/webpack-build-custom.yml
@@ -15,8 +15,8 @@ on:
         options: [ update, dev ]
 
 jobs:
-  webpack-build:
-    name: Build Webpack
+  build-docker-package:
+    name: Build Docker Package
     runs-on: ubuntu-latest
     steps:
         - name: Pull code
@@ -37,31 +37,29 @@ jobs:
           run: npm install
           working-directory: ./ab_platform_web
 
+        # Webpack
         - name: Webpack build
           run: npm run build:${{ inputs.build_type }}
           working-directory: ./ab_platform_web
 
-  docker-build-push:
-    name: Build/Push Docker
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        # Docker
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+          
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          platforms: linux/amd64,linux/arm64
-          build-args: BRANCH=${{ inputs.base_tag }}
-          tags: ${{ inputs.docker_tags }}
-          context: ./web
+        - name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            push: true
+            platforms: linux/amd64,linux/arm64
+            build-args: BRANCH=${{ inputs.base_tag }}
+            tags: ${{ inputs.docker_tags }}
+            context: ./web
