--- a/.github/workflows/webpack-build-custom.yml
+++ b/.github/workflows/webpack-build-custom.yml
@@ -61,5 +61,5 @@ jobs:
             push: true
             platforms: linux/amd64,linux/arm64
             build-args: BRANCH=${{ inputs.base_tag }}
-            tags: ${{ inputs.docker_tags }}
+            tags: wongpratan/test:${{ inputs.docker_tags }}
             context: ./web
