--- a/.github/workflows/docker-build-custom.yml
+++ b/.github/workflows/docker-build-custom.yml
@@ -63,6 +63,6 @@ jobs:
             push: true
             platforms: linux/amd64,linux/arm64
             build-args: BRANCH=${{ inputs.base_tag }}
-            tags: digiserve/ab-web:${{ inputs.docker_tags }}
+            tags: wongpratan/ab-web:${{ inputs.docker_tags }}
             context: ./web
 
